[gd_scene load_steps=8 format=2]

[ext_resource path="res://CompassPro.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/game_over_controls.gd" type="Script" id=2]
[ext_resource path="res://main_btn_normal.tres" type="StyleBox" id=3]
[ext_resource path="res://normal_btn_pressed.tres" type="StyleBox" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.933333, 0.764706, 0.603922, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.4, 0.223529, 0.192157, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
corner_detail = 1
anti_aliasing = false

[node name="GameOverUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.323532
margin_right = -800.0
margin_bottom = -599.676
size_flags_horizontal = 0
size_flags_vertical = 0
theme = SubResource( 2 )
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
margin_left = -100.0
margin_top = -64.0
margin_right = 100.0
margin_bottom = 70.0
custom_styles/panel = SubResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 40.0
margin_bottom = 39.0
use_top_left = true

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = -83.0
margin_top = -57.0
margin_right = 83.0
margin_bottom = 57.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="WavesCompleted" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 166.0
margin_bottom = 15.0
custom_colors/font_color = Color( 0.67451, 0.196078, 0.196078, 1 )
text = "You completed X waves! "
align = 1

[node name="HighScore" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 19.0
margin_right = 166.0
margin_bottom = 34.0
custom_colors/font_color = Color( 0.4, 0.223529, 0.192157, 1 )
text = "High Score: X waves"
align = 1

[node name="UpgradesHeader" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 166.0
margin_bottom = 53.0
custom_colors/font_color = Color( 0.247059, 0.247059, 0.454902, 1 )
text = "Your Upgrades"
align = 1

[node name="SpeedStat" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 57.0
margin_right = 166.0
margin_bottom = 72.0
custom_colors/font_color = Color( 0.4, 0.223529, 0.192157, 1 )
text = "Speed: Level X / 5"
align = 1

[node name="RangedAttackStat" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 166.0
margin_bottom = 91.0
custom_colors/font_color = Color( 0.4, 0.223529, 0.192157, 1 )
text = "Ranged Attack: Level X / 3"
align = 1

[node name="ReturnButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 95.0
margin_right = 166.0
margin_bottom = 114.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
text = "Main Menu"

[connection signal="pressed" from="CenterContainer/VBoxContainer/ReturnButton" to="." method="_on_ReturnButton_pressed"]
